--- a/css/style.css
+++ b/css/style.css
@@ -16,13 +16,10 @@ box-sizing: inherit;
 img {
   max-width: 100%;
 }
-
 .main-header {
   background-color: #eeeeee;
-
   padding-top: 50px;
   height: 545px;
-
   box-sizing: border-box;
 }
 .container {
@@ -32,11 +29,8 @@ img {
 }
 .header {
   background-color: #eeeeee;
-
   padding-top: 50px;
   height: 545px;
-
-
   box-sizing: border-box;
 }
 /*хэдэр и навигация*/
@@ -68,45 +62,35 @@ img {
   list-style: none;
 }
 .main-navigation li {
-
-
-
   padding-right: 36px;
-padding-left: 10px;
+  padding-left: 10px;
   font-size: 16px;
   line-height: 30px;
   font-weight: bold;
-
 }
 
 .main-navigation a {
   text-transform: uppercase;
   text-decoration: none;
   color: #000000;
-
-
-
 }
 .main-navigation a:hover {
   color:#fb565a;
 }
 .main-navigation a:active {
-  color:#eeeeee;
+  color: #a6a6a6;
 }
 .main-navigation .active {
   position: relative;
-
-
+  color: black;
 }
-
 .main-navigation .active::after {
   content: "";
   position: absolute;
   top: 33px;
-      left: 10px;
+  left: 10px;
   width: 60%;
   height: 3px;
-
   background-color: #fb565a;
 }
 .user-block {
@@ -115,7 +99,7 @@ padding-left: 10px;
 .basket {
   position: relative;
   display: inline-block;
-    padding: 8px 0px 0px 52px;
+  padding: 8px 0px 0px 52px;
   font-size: 16px;
   line-height: 30px;
   vertical-align: top;
@@ -128,7 +112,7 @@ padding-left: 10px;
   color: #fb565a;
 }
 .basket:active {
-    color: #dadada;
+  color: #dadada;
 }
 .basket::before {
   content: "";
@@ -179,12 +163,11 @@ padding-left: 10px;
 #btn-1:checked ~ .slider-controls label[for="btn-1"],
 #btn-2:checked ~ .slider-controls label[for="btn-2"],
 #btn-3:checked ~ .slider-controls label[for="btn-3"] {
-  border: 5px solid white;
-  border-radius: 50%;
+border: 5px solid white;
+border-radius: 50%;
 background: url("../img/index/spritesheet.png") no-repeat;
 background-position: -10px -10px;
 }
-
 .slide{
     position:absolute;
     top:0;
@@ -209,8 +192,6 @@ background-position: -10px -10px;
 .slide-text p{
   font-size: 16px;
   line-height: 24px;
-  font-family: "Roboto", "Arial", sans-serif;
-  font-style: regular;
 }
 .slide .btn{
     display:block;
@@ -218,7 +199,6 @@ background-position: -10px -10px;
     padding:12px 0;
     margin-top: 40px;
     font-size:16px;
-
     color:white;
     text-transform:uppercase;
     text-align:center;
@@ -272,39 +252,28 @@ background-position: -10px -10px;
 /*catalog header*/
 .catalog-header {
   background-color: #eeeeee;
-
   padding-top: 50px;
   height: 356px;
-
-
-
 }
 .main-title {
   display: inline-block;
   font-size: 55px;
   line-height: 55px;
   color: #000000;
-
-
   width: 100%;
   text-align: center;
-
   margin-top: 70px;
-
 }
 /* products*/
 .products {
   display: flex;
-width: 1100px;
+  width: 1100px;
   justify-content: space-between;
   margin-bottom: 82px;
-
   margin-top: 80px;
-
 }
 .product {
   display: flex;
-
   flex-direction: column;
   justify-content: space-between;
   align-items: baseline;
@@ -314,7 +283,6 @@ width: 1100px;
 }
 .product-img {
   margin-bottom: 26px;
-
 }
 .product-title {
   font-size: 24px;
@@ -323,7 +291,6 @@ width: 1100px;
   font-weight: bold;
   font-family: "Roboto", "Arial", sans-serif;
   text-transform: uppercase;
-
 }
 .product .btn {
   display:block;
@@ -373,27 +340,21 @@ width: 1100px;
   display: flex;
   justify-content: space-between;
   position: relative;
-
-
-padding-top: 34px;
-border-top: 2px solid #eeeeee;
+  padding-top: 34px;
+  border-top: 2px solid #eeeeee;
 }
 .left-side {
   width: 660px;
   padding-top: 37px;
 }
 .second-title {
-
   font-size: 45px;
   line-height: 45px;
   color: #000000;
-
-
   margin: 0px;
 }
 .small-title {
   display: block;
-
   text-transform: uppercase;
    margin-bottom: 22px;
 }
@@ -407,11 +368,8 @@ border-top: 2px solid #eeeeee;
 }
 .content-list li {
   margin-bottom: 10px;
-
   font-size: 16px;
   line-height: 24px;
-
-
 }
 .content-list .list-item {
   position: relative;
@@ -427,39 +385,28 @@ border-top: 2px solid #eeeeee;
     height: 2px;
     background-color: #fb565a;
   }
-
 .right-side {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   width: 360px;
- height: auto;
-     padding-bottom: 30px;
+  height: auto;
+  padding-bottom: 30px;
 }
 .logo-img {
   width: 360px;
-padding-top: 2px;
+  padding-top: 2px;
   margin-bottom: 15px;
 }
 .right-side-title {
-
-
-
-
   color: #000000;
-
-
-
   text-transform: uppercase;
 }
-
 /*features*/
 .features-info {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-
-
   height: 95px;
   padding-right: 20px;
 }
@@ -487,36 +434,30 @@ padding-top: 2px;
   font-size: 45px;
   line-height: 18px;
   font-weight: bold;
-  font-family: "Roboto", "Arial", sans-serif;
   margin-bottom: 30px;
 }
 .description {
   font-size: 16px;
   line-height: 18px;
   font-weight: normal;
-  font-family: "Roboto", "Arial", sans-serif;
 }
 
 /*партнеры*/
 .partners {
   display: flex;
-
-
-position: relative;
+  position: relative;
   height: 185px;
   margin-top: 48px;
   margin-bottom: 30px;
-padding-bottom: 30px;
+  padding-bottom: 30px;
   padding-top: 30px;
   border-top: 2px solid #eeeeee;
   border-bottom:  2px solid #eeeeee;
-
 }
 .partner {
-  width: 260px;
+    width: 260px;
     margin-left: 21px;
     margin-right: 20px;
-
     height: 53px;
     margin-top: 33px;
     border-right: 2px solid #eeeeee;
@@ -525,24 +466,21 @@ padding-bottom: 30px;
   width: 260px;
   margin-left: 21px;
   margin-right: 20px;
-
-    height: 53px;
-    margin-top: 33px;
-    border-right: 2px solid #eeeeee;
+  height: 53px;
+  margin-top: 33px;
+  border-right: 2px solid #eeeeee;
 }
 .partner3 {
   width: 280px;
-    height: 53px;
-    margin-top: 33px;
-    border-right: 2px solid #eeeeee;
+  height: 53px;
+  margin-top: 33px;
+  border-right: 2px solid #eeeeee;
 }
 .p1 {
   opacity: 0.2;
   position: absolute;
   top: 62px;
   left: 32px;
-
-
 }
 .p1:hover {
   opacity: 1;
@@ -584,8 +522,7 @@ padding-bottom: 30px;
   opacity: 1;
 }
 .p4:active {
-  opacity: 0.1
-  ;
+  opacity: 0.1;
 }
 /*map*/
 .map {
@@ -596,13 +533,10 @@ padding-bottom: 30px;
   margin-top: 80px;
   margin-bottom: 70px;
 }
-
-
 .contacts-container {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-
   position: absolute;
   top:  54px;
   left: 140px;
@@ -610,16 +544,15 @@ padding-bottom: 30px;
   width: 320px;
   padding: 52px 50px 50px 50px;
   background-color: #ffffff;
-
 }
 .map-catalog {
+  position: relative;
   margin-top: 59px;
 }
 .contacts-container-catalog {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-
   position: absolute;
   top:  52px;
   left: 140px;
@@ -627,7 +560,6 @@ padding-bottom: 30px;
   width: 320px;
   padding: 50px 50px 50px 50px;
   background-color: #ffffff;
-
 }
 .contacts-infotmation {
   display: flex;
@@ -642,7 +574,6 @@ padding-bottom: 30px;
   font-weight: bold;
   font-family: "Roboto", "Arial", sans-serif;
   text-transform: uppercase;
-
 }
 .contacts-infotmation-adress {
   font-size: 16px;
@@ -677,23 +608,22 @@ padding-bottom: 30px;
   background-color: #d7373b;
   color: #dc4f53;
 }
-
-
 /*pop up*/
 .modal-content {
   display: none;
-
   position: absolute;
-  top: 1710px;
- left: 50%;
+  left: 50%;
+  top:1709px;
   width: 960px;
   padding: 61px 100px 85px 100px;
-margin-left: -480px;
+  margin-left: -480px;
   color: #000000;
-
   background: white;
-   box-shadow: 5px 5px 25px 5px rgba(0, 0, 0, 0.7);
-
+  box-shadow: 5px 5px 25px 5px rgba(0, 0, 0, 0.7);
+}
+.modal-catalog {
+  left: 50%;
+  top:2449px;
 }
 .modal-content-show {
   display: block;
@@ -713,17 +643,15 @@ margin-left: -480px;
   right: 90px;
   width: 22px;
   height: 22px;
-opacity: 0.3;
+  opacity: 0.3;
   font-size: 0;
-margin-top: 13px;
+  margin-top: 13px;
   background: white url("../img/index/spritesheet_2.png") no-repeat;
   background-position: -100px -10px;
   border: 0;
   cursor: pointer;
 }
-
 .write-us-form {
-
 }
 .modal-content-close:hover{
   opacity: 1;
@@ -731,7 +659,6 @@ margin-top: 13px;
 .modal-content-close:active{
   opacity: 0.1;
 }
-
 .modal-content-title {
   margin: 0px;
   margin-bottom: 39px;
@@ -741,7 +668,6 @@ margin-top: 13px;
   color: #000000;
 }
 .modal-content .name {
-
   margin-bottom: 10px;
   margin-right: 40px;
   margin-top: 7px;
@@ -756,21 +682,19 @@ margin-top: 13px;
 border: 2px solid #b4b9bb;
 color: #b4b9bb;
 }
-
 .modal-content .name:focus {
-outline: 2px solid #000000 ;
+ outline: 2px solid #000000 ;
  color: #000000;
 }
 .modal-content .name:invalid {
-border: 2px solid #e74246 ;
+ border: 2px solid #e74246 ;
  color: #e74246;
 }
-
 .name_label {
   margin-bottom: 5px;
 }
 .modal-content .email {
-margin-top: 7px;
+  margin-top: 7px;
   margin-bottom: 10px;
   width: 360px;
   height:  49px;
@@ -779,61 +703,52 @@ margin-top: 7px;
   padding-left: 16px;
   font-size: 16px;
 }
-
-.modal-content .email:hover {
-border: 2px solid #d7dcde;
-color: #d7dcde;
+ .email:hover {
+  border: 2px solid #b4b9bb;
+  color: #b4b9bb;
 }
-
-.modal-content .email:focus {
-outline: 2px solid #000000 ;
- color: #000000;
+ .email:focus {
+   outline: 2px solid #000000 ;
+   color: #000000;
 }
-.modal-content .email:invalid {
-border: 2px solid #e74246 ;
+ .email:invalid {
+ border: 2px solid #e74246 ;
  color: #e74246;
 }
 .letter {
   width: 760px;
-
-font-size: 16px;
-   padding: 12px 0px 86px 14px;
-
   font-size: 16px;
-
-
+  padding: 12px 0px 86px 14px;
+  font-size: 16px;
   border: 2px solid #d7dcde;
   color: #d7dcde;
   margin-bottom: 46px;
-margin-top: 3px;
+  margin-top: 3px;
 }
-
 .letter:hover {
   border: 2px solid #b4b9bb;
   color: #b4b9bb;
 }
 .letter:focus {
-outline: 2px solid #000000 ;
+ outline: 2px solid #000000 ;
  color: #000000;
 }
 .letter:invalid {
-border: 2px solid #e74246 ;
+ border: 2px solid #e74246 ;
  color: #e74246;
 }
 .write-us-form .btn{
   display:block;
   width:260px;
   padding:15px 0;
-border: none;
+  border: none;
   font-size:16px;
-
   color:white;
   text-transform:uppercase;
   text-align:center;
   text-decoration:none;
   background:#fb565a;
   border-radius:3px;
-
 }
 .write-us-form .btn:hover {
   background:#e74246;
@@ -847,10 +762,7 @@ border: none;
   display: flex;
   justify-content: space-between;
   position: relative;
-
-
-border-top: 2px solid #eeeeee;
-
+  border-top: 2px solid #eeeeee;
   padding-top: 53px;
 }
 /*left panel*/
@@ -880,24 +792,19 @@ border-top: 2px solid #eeeeee;
   margin-bottom: 15px;
   border-radius: 1px;
   background: #f1f1f1;
-
 }
-
 .range-controls .scale {
   height: 2px;
   background: #d7dcde;
 }
-
 .range-controls .bar {
   width: 70%;
   height: 2px;
   background: #00ca74;
 }
-
 .range-controls .toggle {
   position: absolute;
   top: 30px;
-
   width: 4px;
   height: 4px;
   cursor: pointer;
@@ -906,62 +813,49 @@ border-top: 2px solid #eeeeee;
   background: #ababab;
   box-shadow: 0 2px 1px 0 #cfcfcf;
 }
-
 .range-controls .toggle-min {
   left: 20px;
   box-sizing: content-box;
 }
-
 .range-controls .toggle-max {
   left: 160px;
   box-sizing: content-box;
 }
-
 .price-controls {
   display: flex;
   justify-content: space-between;
-
   padding-left: 2px;
 }
-
-
-
 .price-controls input {
   font-family: 'Roboto', 'Arial', sans-serif;
   font-size: 16px;
   width: 78px;
-
-margin-left: 10px;
-padding: 9px 10px 9px 10px;
+  margin-left: 10px;
+  padding: 9px 10px 9px 10px;
   text-align: center;
   color: #283136;
   border: none;
   border-radius: 1px;
   background: #f1f1f1;
 }
-
 .price-controls .min-price {
   display: inline-block;
-font-size: 18px;
-margin-right: 28px;
-
+  font-size: 18px;
+  margin-right: 28px;
 }
 .price-controls .max-price {
   display: inline-block;
-font-size: 18px;
-margin: 0px;
+  font-size: 18px;
+  margin: 0px;
 }
-
 .type-of-net{
-position: relative;
-
+  position: relative;
   cursor: pointer;
   color: #4d4d4d;
   margin-bottom: 16px;
 }
-
 .net-name {
-margin-bottom: 14px;
+  margin-bottom: 14px;
   font-size: 18px;
   line-height: 30px;
   color: #000000;
@@ -976,10 +870,8 @@ margin-bottom: 14px;
   position: absolute;
   top: -3px;
   left: 3px;
-
   width: 24px;
   height: 24px;
-
   border: 3px solid #4d4d4d;
   border-radius: 50%
 }
@@ -989,7 +881,6 @@ margin-bottom: 14px;
   position: absolute;
   top: 5px;
   left: 5px;
-
   width: 8px;
   height: 8px;
   border-radius: 50%;
@@ -1002,9 +893,9 @@ margin-bottom: 14px;
 }
 .type-of-net li {
   position: relative;
-padding-left: 39px;
+  padding-left: 39px;
   padding-bottom: 6px;
-margin-bottom: 10px;
+  margin-bottom: 10px;
   font-size: 16px;
   opacity: 0.4;
 }
@@ -1015,8 +906,7 @@ margin-bottom: 10px;
   opacity: 0.1;
 }
 .features{
-position: relative;
-
+  position: relative;
   cursor: pointer;
   color: #4d4d4d;
 }
@@ -1045,17 +935,13 @@ position: relative;
 cursor: pointer;
   width: 24px;
   height: 24px;
-
   background: url("../img/index/spritesheet_2.png") no-repeat;
   background-position: -10px -10px;
 }
 .features-label input[type="checkbox"]:checked + .checkbox-indicator {
-
-
  background: url("../img/index/spritesheet_2.png") no-repeat;
  background-position: -53px -10px;
 }
-
 .features ul {
   padding: 0;
   margin: 0;
@@ -1077,12 +963,10 @@ cursor: pointer;
 }
 .left-panel .btn {
   display:block;
-
   padding:17px 90px;
-margin-top: 38px;
+  margin-top: 38px;
   font-size:16px;
   line-height: 18px;
-
   color:  black;
   text-transform:uppercase;
   text-align:center;
@@ -1111,23 +995,18 @@ margin-top: 38px;
   align-items: center;
   margin-bottom: 55px;
   padding-top: 3px;
-
 }
-
-
 .sort-text {
   font-size: 18px;
   line-height: 18px;
-
   font-weight: bold;
-
   text-transform: uppercase;
 }
 .catalog-sort ul {
   display: flex;
-position: relative;
-padding-right: 64px;
-padding-top: 1px;
+  position: relative;
+  padding-right: 64px;
+  padding-top: 1px;
   margin: 0;
   list-style: none;
 }
@@ -1141,9 +1020,13 @@ padding-top: 1px;
   background: white url("../img/catalog/spritesheet.png") no-repeat;
   background-position: -165px -5px;
   opacity: 0.2;
+  cursor: pointer;
 }
 .catalog-sort ul:before:hover {
   opacity: 0.4;
+}
+.catalog-sort ul:before:active {
+  opacity: 1;
 }
 .catalog-sort ul:after {
   content: "";
@@ -1153,7 +1036,8 @@ padding-top: 1px;
   width: 20px;
   height: 20px;
   background: white url("../img/catalog/sort_up.png") no-repeat;
-opacity: 0.2;
+  opacity: 0.2;
+  cursor: pointer;
 }
 .catalog-sort ul:after:hover {
   opacity: 0.4;
@@ -1182,32 +1066,28 @@ opacity: 0.2;
   color: #000000;
   padding-left: 3px;
   padding-right: 23px;
-
 }
 
 .catalog-sort .active {
     opacity: 1;
 }
-
 .catalog-gallery{
-margin-bottom: 20px;
+  margin-bottom: 20px;
   display: flex;
   justify-content: space-between;
   flex-wrap:  wrap ;
   width: 760px;
 }
 .catalog-gallery-item {
-position: relative;
-
+  position: relative;
   height: 615px;
   padding-top: 40px;
- margin-bottom: 40px;
-
+  margin-bottom: 40px;
   background: white url("../img/catalog/browser.png") no-repeat;
   background-position: top;
 }
 .catalog-gallery-item:hover {
-    background: white url("../img/catalog/browser_hover.png") no-repeat;
+  background: white url("../img/catalog/browser_hover.png") no-repeat;
 }
 .catalog-gallery-item img {
   display: block;
@@ -1225,51 +1105,40 @@ position: relative;
 }
 .wrapper-block {
   position: absolute;
-
   display: block;
   text-align: center;
   position: absolute;
   bottom: 0px;
   left: 0px;
   width:100%;
-
-
-padding: 15px   41px;
+  padding: 15px   41px;
   margin: 0px;
   background-color: #eeeeee;
 }
-/*
 .wrapper-block {
   display: none;
 }
-*/
 .catalog-gallery-item:hover  .wrapper-block{
   display: block;
 }
 .item-title {
   font-size: 18px;
-
   color: #000000;
-margin: 16px;
-
+  margin: 16px;
   text-transform: uppercase;
   text-decoration: none;
 }
 .item-title a  {
-text-decoration: none;
+  text-decoration: none;
   color: #000000;
 }
 .wrapper-description {
   text-align: center;
-
   color: #666666;
-
-
 }
 .wrapper-block .btn {
   display:block;
-
-    padding:13px 0px;
+  padding:13px 0px;
   margin-top: 21px;
   margin-bottom: 25px;
   margin-right: 37px;
@@ -1288,23 +1157,21 @@ text-decoration: none;
   background-color: #d7373b;
 }
 .wrapper-block {
-  display: none;
+display: none;
 }
 .wrapper-block:nth-child(1) {
-  display: inline-block;
+display: inline-block;
 }
-
-  .paginations ul {
-    padding: 0;
-    margin: 0;
-    list-style: none;
-    font-size: 0px;
+.paginations ul {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  font-size: 0px;
   }
-  .paginations li {
-    display: inline-block;
-    vertical-align: top;
-    margin-right: 12px;
-
+.paginations li {
+  display: inline-block;
+  vertical-align: top;
+  margin-right: 12px;
   }
 .pag .btn {
   display: flex;
@@ -1320,15 +1187,15 @@ text-decoration: none;
   text-transform: uppercase;
   text-decoration: none;
   background-color: #dbdbdb;
-    border-radius:3px;
-    border: 3px solid #dbdbdb;
+  border-radius:3px;
+  border: 3px solid #dbdbdb;
 }
 .pag .btn:hover {
-    background-color: #dfdfdf;
+  background-color: #dfdfdf;
 }
 .pag .btn:active{
-    background-color: #d5d5d5;
-    color: #959595;
+  background-color: #d5d5d5;
+  color: #959595;
 }
 .pag .btn-disabled:hover {
   background-color: white;
@@ -1340,9 +1207,8 @@ text-decoration: none;
 .pag .btn-big {
   width: 260px;
   margin-right: 0px;
-padding: 10px 107px 10px 104px;
+  padding: 10px 107px 10px 104px;
 }
-
 /*footer*/
 .main-footer {
   margin-left: 10px;
@@ -1351,8 +1217,6 @@ padding: 10px 107px 10px 104px;
 }
 .main-footer-layout {
   display: flex;
-
-
 }
 .social-button {
   display: flex;
@@ -1363,13 +1227,11 @@ padding: 10px 107px 10px 104px;
   justify-content: space-between;
 }
 .social-btn {
-width: 79px;
-height: 79px;
-border-radius: 60%;
+  width: 79px;
+  height: 79px;
+  border-radius: 60%;
   font-size: 0;
-
   text-decoration: none;
-
   background: #e1e1e1 url("../img/index/social-style-sheet.png") no-repeat center;
 }
 .social-btn:hover {
@@ -1380,40 +1242,28 @@ border-radius: 60%;
   color: #e37376;
 }
 .social-btn-vk {
-    background-position: -395px -48px;
+  background-position: -395px -48px;
 }
-
 .social-btn-fb {
-
-    background-position: -45px -50px;
+  background-position: -45px -50px;
 }
-
-
 .social-btn-inst {
-    background-position: -217px -50px;
+  background-position: -217px -50px;
 }
-
-
-
 .footer-information {
   display: flex;
-      flex-direction: column;
-      order: 2;
-padding-top: 5px;
-padding-right: 20px;
+  flex-direction: column;
+  order: 2;
+  padding-top: 5px;
+  padding-right: 20px;
 }
 .slogan {
   font-size: 36px;
   line-height: 36px;
-  color: #000000;
   font-weight: bold;
-  font-family: "Roboto", "Arial", sans-serif;
   margin-bottom: 9px;
 }
 .slogan-description {
   font-size: 16px;
   line-height: 22px;
-  color: #000000;
-
-  font-family: "Roboto", "Arial", sans-serif;
 }
